--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ src="https://www.facebook.com/tr?id=1418936206563924&ev=PageView&noscript=1"
 
 
 
-    <a href="https://www.t.me/+12eRQ5SHXVZiNDVl" target="_blank" class="btn-telegram mb-6">
+    <a href="https://www.t.me/+1giSejsZtiU0MGE1" target="_blank" class="btn-telegram mb-6">
 
 
 
@@ -487,6 +487,7 @@ src="https://www.facebook.com/tr?id=1418936206563924&ev=PageView&noscript=1"
 
 
 </html>
+
 
 
 
